[project]
name = "libtopo"
version = "1.0.8"
description = "Calculos topograficos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
topo = "topo:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
